# data-transformation-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run_api.py  run_ui.py
.claude/: settings.json
.claude/skills/delivery-planning/: SKILL.md
.claude/skills/delivery-readiness/: SKILL.md
.claude/skills/dependency-and-lineage/: SKILL.md
.claude/skills/dependency-mapping/: SKILL.md
agent/: agent_app.py
app/: __init__.py
app/api/: app.py
app/core/: __init__.py  auth.py  config.py  models.py
app/runtime/: __init__.py  agent.py  hooks.py  prompts.py  providers.py
app/session/: manager.py  templates.py
app/transformation/: __init__.py  capabilities.py  governance.py  models.py  service.py
app/web/: __init__.py  app.py
config/: deployment.py  settings.py
config/agentcore/: Dockerfile.template  agentcore-execution-permissions.template.json  agentcore-execution-trust-policy.template.json  bedrock_agentcore.yaml.template
config/templates/: __init__.py
data/metadata/: README.md  s3_structure.md
docs/: architecture.md
scripts/: deploy_agentcore.py  invoke_agentcore.py
scripts/hooks/: session_end.py  session_start.py
scripts/mcp/: project_insights_server.py  transformation_domain_server.py
storage/.claude-runtime/: .claude.json
templates/: data-dependency-map-template.md  delivery-implementation-plan-template.md  transformation-understanding-template.md
test/sampletestdata/: README.txt
tools/: athena_tools.py  knowledge_base_tools.py  registry.py  s3_tools.py  sql_validator.py
(+72 files in other folders)
